--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <properties>
     <java.version>21</java.version>
     <junit.version>5.11.4</junit.version>
-    <maven.compiler.target>21</maven.compiler.target>
-    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
   </properties>
 
