--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
   <properties>
     <java.version>21</java.version>
     <junit.version>5.11.4</junit.version>
+    <mockito.version>5.2.0</mockito.version>
+    <hamcrest.version>2.2</hamcrest.version>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
@@ -21,6 +23,20 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>${hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
 
